infra/stack/messaging_bee.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-bee
  labels:
    app: messaging-bee
spec:
  selector:
    matchLabels:
      app: messaging-bee
  template:
    metadata:
      labels:
        app: messaging-bee
    spec:
      volumes:
      - name: logs
        hostPath:
          path: /var/log/akingbee

      containers:
      - image: yomain/akingbee:v1.1.3
        name: messaging-bee
        command: ["python", "listener.py"]
        volumeMounts:
        - mountPath: /app/log
          name: logs
