infra/stack/elk.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic
  labels:
    app: elastic
spec:
  ports:
  - port: 9200
    targetPort: 9200
  selector:
    app: elastic
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic
  labels:
    app: elastic
spec:
  selector:
    matchLabels:
      app: elastic
  template:
    metadata:
      labels:
        app: elastic
    spec:
      volumes:
      - name: elastic-cache
        hostPath:
          path: /data
          type: DirectoryOrCreate
      containers:
        image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
        name: elastic
        volumeMounts:
          - mountPath: /usr/share/elasticsearch/data
            name: elastic-cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  selector:
    matchLabels:
      app: kibana
  containers:
    image: docker.elastic.co/kibana/kibana:7.6.1
    name: kibana
