infra/stack/webapp-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: akingbee
  labels:
    app: akingbee
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: akingbee
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akingbee
  labels:
    app: akingbee
spec:
  selector:
    matchLabels:
      app: akingbee
  template:
    metadata:
      labels:
        app: akingbee
    spec:
      containers:
      - image: yomain/akingbee:v1.1.1
        name: akingbee
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /_/status
            port: 8080
        command: ["uwsgi", "--ini", "./uwsgi.ini"]
        volumeMounts:
        - mountPath: /app/log
          name: logs

      volumes:
      - name: logs
        hostPath:
          type: DirectoryOrCreate
          path: /var/log/akingbee
