infra/stack/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: akb-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "akb-entrypoint"
spec:
  tls:
  - hosts:
    - akingbee.com
    - www.akingbee.com
    - grafana.akingbee.com
    secretName: akingbee.com-tls

  rules:
  - host: akingbee.com
    http:
      paths:
        - backend:
            serviceName: akingbee
            servicePort: 8080

  - host: grafana.akingbee.com
    http:
      paths:
        - backend:
            serviceName: grafana
            servicePort: 3000

  - http:
      paths:
        - backend:
            serviceName: akingbee
            servicePort: 8080
